# overlap

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG  Cargo.toml  Dockerfile  Makefile  README.md  README.rst
.cargo-husky/hooks/: pre-commit
.tool/: get-covered  setup-gitlab-runner  setup-kcov
.tools/: ci-runner  setup-kcov
src/: config.rs  lib.rs  line.rs  main.rs  reader.rs
test/: integration_test.rs
