[package]
name = "overlap"
version = "0.0.1"
authors = ["Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
description = "a tool shows overlap text in files"
repository = "https://gitlab.com/grauwoelfchen/overlap"
keywords = []
license = "Apache-2.0"

[lib]
name = "overlap"
path = "src/lib.rs"

[[bin]]
name = "overlap"
path = "src/main.rs"

[dependencies]
clap = { version = "2.32.0" }
