[package]
name = "overlap"
version = "0.0.1"
authors = ["Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
description = "a tool shows overlap text in files"
repository = "https://gitlab.com/grauwoelfchen/overlap"
keywords = []
license = "Apache-2.0"
exclude = [
  "benches/*",
  "tests/*",
]

[lib]
name = "overlap"
path = "src/lib.rs"

[[bin]]
name = "overlap"
path = "src/main.rs"

[dependencies]
clap = { version = "2.32.0" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
