[package]
name = "overlap"
version = "0.0.2"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
description = """
A tool shows overlap text in files
"""
documentation = "https://gitlab.com/grauwoelfchen/overlap"
repository = "https://gitlab.com/grauwoelfchen/overlap"
homepage = "https://gitlab.com/grauwoelfchen/overlap"
readme = "README.md"
keywords = ["cli", "text"]
categories = ["command-line-utilities", "text-processing"]
license = "Apache-2.0"
exclude = [
  "benches/*",
  "tests/*",
  ".tool/*",
  ".cargo-husky/*",
  "/.clippy.toml",
  "/.rustfmt.toml",
  "/.gitlab-ci.yml",
  "/.env.ci.sample",
]
edition = "2018"

[badges]
gitlab = { repository = "grauwoelfchen/overlap", branch = "master" }

[lib]
name = "overlap"
path = "src/lib.rs"

[[bin]]
name = "overlap"
path = "src/main.rs"

[profile.release]
panic = "abort"

[dependencies]
clap = { version = "2.32.0" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
